@@ -1,3 +1,10 @@
+2004-11-08  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* storage/exchange-folder-size.c : Revamped the code to now be a class
+	so other hierarchy classes can now instantiate this as an object and
+	this class handles only the displaying of the folder tree
+	* storage/exchange-folder-size.h : Similar
+
 2004-11-04  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* storage/exchange-folder-size.c : Added a new file. This handles the
